# buckyos

./: .gitignore  AGENTS.md  Contributor Guide.md  DAO Rules.md  Project templates.md  README.md  README_zhCN.md  agents.local.md  buckyos介绍.md  build.py  build_aios  build_exttool  build_script_service  check.py  devcontainer.json  devenv.json  devenv.py  make_local_pkg.py  make_pkg.ps1  make_pkg.sh  new_AGENTS.md  no_useAGENTS.md  pyproject.toml  system_config.md
demo/: .gitignore  Cargo.toml  Dockerfile  backup_task_mgr.db  install-local-build.sh  install.sh  quickstart.md  readme.md
demo/backup_lib/: Cargo.toml
demo/backup_lib/src/: chunk_mgr.rs  chunk_storage.rs  chunk_storage_sqlite.rs  file_mgr.rs  file_storage.rs  file_storage_sqlite.rs  http.rs  lib.rs  storage.rs  task.rs  task_mgr.rs  task_storage.rs
demo/backup_server/: Cargo.toml
demo/backup_server/src/: backup_file_mgr.rs  backup_index.rs  chunk_mgr.rs  chunk_mgr_storage.rs  file_mgr.rs  file_mgr_storage.rs  main.rs  main_v0.rs  main_v1.rs  readme.md  task_mgr.rs  task_mgr_storage.rs
demo/backup_service/: Cargo.toml
demo/backup_service/script/: deploy.sh  start.sh  status.sh  stop.sh
demo/backup_service/src/: backup_task.rs  chunk_transfer.rs  lib.rs  main-test.rs  main.rs  restore_task.rs  task.rs  task_mgr.rs  task_storage.rs  task_storage_sqlite.rs
demo/buckycli/: Cargo.toml  build.rs
demo/buckycli/src/: main.rs
demo/dcfs_client/: Cargo.toml
demo/etcd_client/: Cargo.toml
demo/etcd_client/src/: lib.rs
demo/frame-glusterfs/: deploy.sh  start.sh  stop.sh
demo/gateway/: Cargo.toml
demo/gateway-lib/: Cargo.toml
demo/gateway-lib/src/: config_gen.rs  def.rs  endpoint.rs  lib.rs  peer.rs  stub.rs
demo/gateway/src/: config.rs  config_gen.rs  constants.rs  context.rs  endpoint.rs  error.rs  gateway.rs  lib.rs  main.rs  test.rs
demo/glusterFS_service/: deploy.sh
demo/name_client/: Cargo.toml
demo/name_client/src/: lib.rs  name_client.rs
demo/nginx_service/: deploy.sh  status.sh
demo/node_control/: Cargo.toml
demo/node_control/src/: main.rs
demo/node_daemon/: Cargo.toml  etcd2_node_config.json  node_config.json  node_config_etcd1.json  node_config_gateway.json  node_identity.toml  zone_config.json  zone_node_config.json
demo/node_daemon/src/: backup.rs  backup_task_mgr.rs  backup_task_storage.rs  etcd_mgr.rs  main.rs  pkg_mgr.rs  run_item.rs  service_mgr.rs  system_config.rs
demo/package_cli/: Cargo.toml
demo/package_cli/src/: main.rs
demo/package_manager/: Cargo.toml
demo/package_manager/src/: downloader.rs  env.rs  error.rs  installer.rs  loader.rs  main.rs  parser.rs  version_util.rs
demo/package_server/: Cargo.toml
demo/package_server/src/: main.rs
demo/smb_service/: deploy.sh  start.sh
demo/state-waiter/: Cargo.toml
demo/system_config/: Cargo.toml
demo/system_config/src/: lib.rs
demo/tests/gateway_client/: Cargo.toml
demo/vpn/: Cargo.toml
demo/vpn/example/: main.rs
demo/vpn/src/: cmds.rs  error.rs  lib.rs  vpn_client.rs  vpn_server.rs
src/: Cargo.toml  bucky_project.json  bucky_project.yaml  buckyos-build.py  buckyos-install.py  build.py  build_arm.py  build_arm_old.py  build_env.py  debug_jarvis.sh  debug_systest.sh  diagnose_jarvis_orbstack.sh  index.html  install.py  killall.py  make_config.py  make_deb.py  make_deb_arm.py  make_deb_arm_old.py  make_deb_old.py  path_usage.md  port_usage.txt  pub_meta_index.db  read_aicc_log.py  readme.md  reinstall.py  remote_install.py  remove_open_dan_data.sh  scan.bat  scan.ps1  scan.py  set_host.py  start.md  start.py  stop.py  switch.py  uninstall.py
src/.cargo/: config.toml
src/apps/: readme.md
src/apps/cyfs_gateway/: Cargo.toml
src/apps/hello_bucky/: app_doc.json  build.py  publish.py
src/apps/home_station/: Dockerfile
src/apps/sys_test/: build.mjs  deno.json  index.ts  main.ts  package.json  pnpm-lock.yaml  vite.config.ts
src/apps/tray-controller/: Cargo.toml  build.rs
src/apps/tray_controller/: SystemState.cpp  SystemState.h  TrayMenu.cpp  TrayMenu.h  main.cpp  tray_controller.sln  tray_controller.vcxproj
src/bob/: user_config.json  user_private_key.pem
src/components/backup-lib/: Cargo.toml
src/components/buckyos-kit/: Cargo.toml  build.rs
src/components/debug-lib/: Cargo.toml
src/components/etcd_client/: Cargo.toml
src/components/index-lib/: Cargo.toml
src/components/name-client/: Cargo.toml
src/components/name-lib/: Cargo.toml
src/components/ndn-lib/: Cargo.toml  readme.md
src/components/package-installer/: Cargo.toml
src/components/package-lib/: Cargo.toml  build.rs
src/components/package-manager/: .gitignore  Cargo.toml
src/components/repo-service/: Cargo.toml
src/components/state-waiter/: Cargo.toml
src/cyfs_gateway/: gateway_config.json  one_config.json
src/cyfs_gateway/cyfs-dns/: Cargo.toml  readme.md
src/cyfs_gateway/cyfs-gateway-lib/: Cargo.toml
src/cyfs_gateway/cyfs-sn/: Cargo.toml  readme.md
src/cyfs_gateway/cyfs-socks/: Cargo.toml
src/cyfs_gateway/cyfs-warp/: Cargo.toml  demo_config.toml  (+1 more)
src/dev_configs/: aicc.json  dev_vm_config.json  msg_center.json  readme.md  sntest.json
src/publish/: download_pkgs.py  installer.iss  license-cn.md  license.md  make_docker_test_pkg.py  make_local_deb.py  make_local_osx_pkg.py  make_local_win_installer.py  make_mac_pkg.py  make_offical_deb.py  make_win_installer.py  pack_pkgs.py  perpare_offical_installer.py  prepare_packages.py  publish_to_repo.py  readme.md  upload_pkgs.py
src/scripts/: build.py  build_rust.py  build_tray_controller.py  build_web_apps.py  cert_mgr.py  install.py  make_config.py  make_deb.py  make_pkg.py  make_win_installer.py  perpare_installer.py  perpare_rootfs.py  prepare_packages.py  prepare_pub.py  prepare_rootfs.py  pub_buckyos_pkgs.py  push.py
src/test/: cleanup_klog_remote_tests.sh  run_klog_remote_tests.sh  run_rpc_tests.sh
src/tools/: pack.py
src/web3_bridge/: push.py  start.py  stop.py  web3_gateway.json  web3_gateway.service
test/test_jwt/: Cargo.toml  package.json  test_jwt.js
test/test_klog_gateway_rpc/: Cargo.toml
test/test_ndn/: Cargo.toml
(+2223 files in other folders)
