[workspace]
resolver = "2"

members = [
    "./node_daemon",
    "./etcd_client",
	"./backup_server",
    "./buckycli",
    "./name_client", 
    "./dcfs_fuse",
    "./gateway",
    "./etcd_tool",
    "./package_manager",
    "./package_server",
    "./package_cli", "backup_service", "backup_lib", "tests/gateway_client", "gateway-lib",
]
