[workspace]
resolver = "2"

members = [
    "./kernel/buckyos-api",
    "./kernel/sys_config_service",
    "./kernel/verify_hub",
    "./kernel/node_daemon",
    "./kernel/scheduler",
    "./kernel/task_manager",    
    "./kernel/klog", 
    "./kernel/slog", 
    "./kernel/slog_daemon",

    "./frame/slog_server", 
    "./frame/repo_service",
    "./frame/smb_service",

    "./tools/buckycli", 
    "./test/test_rbac", 

    "./apps/cyfs_gateway",
]

exclude = [
    "./tools/ns-tool",
    "./apps/tray-controller"
]

[workspace.package]
version = "0.5.1"

[workspace.dependencies]
buckyos-tracing = { git = "https://github.com/buckyos/buckyos-base.git", package = "buckyos-tracing", branch = "beta1"}
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", package = "buckyos-kit", branch = "beta1" }
package-lib = { git = "https://github.com/buckyos/cyfs-ndn.git", package = "package-lib", branch = "beta1" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-lib", branch = "beta1" }
name-client = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-client", branch = "beta1" }
kRPC = { git = "https://github.com/buckyos/buckyos-base.git", package = "kRPC", branch = "beta1" }
rbac = { git = "https://github.com/buckyos/buckyos-base.git", package = "rbac", branch = "beta1" }
ndn-lib = { git = "https://github.com/buckyos/cyfs-ndn.git", package = "ndn-lib", branch = "beta1" }
cyfs-gateway = { git = "https://github.com/buckyos/cyfs-gateway.git", package = "cyfs_gateway", branch = "main" }
cyfs-gateway-lib = { git = "https://github.com/buckyos/cyfs-gateway.git", package = "cyfs-gateway-lib", branch = "main" }
cyfs-sn = { git = "https://github.com/buckyos/cyfs-gateway.git", package = "cyfs-sn", branch = "main" }
server-runner =  { git = "https://github.com/buckyos/cyfs-gateway.git", package = "server-runner", branch = "main" }
