[workspace]
resolver = "2"

members = [
    "./kernel/buckyos-api",
    "./kernel/kmsg",
    "./kernel/sys_config_service",
    "./kernel/verify_hub",
    "./kernel/node_daemon",
    "./kernel/scheduler",
    "./kernel/task_manager",    
    "./kernel/klog", 
    "./kernel/slog", 
    "./kernel/slog_daemon",

    "./frame/slog_server", 
    "./frame/repo_service",
    "./frame/smb_service",
    
    "./frame/control_panel",

    "./tools/buckycli", 
    "./test/test_rbac"
]

exclude = [
    "./tools/ns-tool",
    "./apps/tray-controller"
]

[workspace.package]
version = "0.5.1"

[workspace.dependencies]
# BuckyOS internal dependencies
buckyos-tracing = { git = "https://github.com/buckyos/buckyos-base.git", package = "buckyos-tracing", branch = "main"}
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", package = "buckyos-kit", branch = "main" }
package-lib = { git = "https://github.com/buckyos/cyfs-ndn.git", package = "package-lib", branch = "main" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-lib", branch = "main" }
name-client = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-client", branch = "main" }
kRPC = { git = "https://github.com/buckyos/buckyos-base.git", package = "kRPC", branch = "main" }
rbac = { git = "https://github.com/buckyos/buckyos-base.git", package = "rbac", branch = "main" }
ndn-lib = { git = "https://github.com/buckyos/cyfs-ndn.git", package = "ndn-lib", branch = "main" }
cyfs-gateway = { git = "https://github.com/buckyos/cyfs-gateway.git", package = "cyfs_gateway", branch = "main" }
cyfs-gateway-lib = { git = "https://github.com/buckyos/cyfs-gateway.git", package = "cyfs-gateway-lib", branch = "main" }
cyfs-sn = { git = "https://github.com/buckyos/cyfs-gateway.git", package = "cyfs-sn", branch = "main" }
server-runner =  { git = "https://github.com/buckyos/cyfs-gateway.git", package = "server-runner", branch = "main" }

# Common async runtime and utilities
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.31"
futures-util = "0.3.31"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Logging
log = "0.4.29"
simplelog = "0.12.2"
env_logger = "0.11.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.100"
anyerror = { version = "0.1.13", features = ["anyhow"] }

# HTTP and web
reqwest = { version = "0.12.28", features = ["json","rustls-tls-native-roots"] }
url = "2.5.8"
http = "1.4.0"
http-body-util = "0.1.3"
bytes = "1.11.0"
axum = "0.8.8"

# Time and date
chrono = "0.4.43"
time = { version = "0.3.45", features = ["formatting"] }

# Configuration and parsing
toml = "0.8.23"
clap = "4.5.54"

# Crypto and security
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
base64 = "0.22.1"
sha2 = "0.10.9"
rand = "0.8.5"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "pem"] }

# Database
rusqlite = { version = "0.32.1", features = ["bundled"] }
sled = "0.34.7"

# Utilities
lazy_static = "1.5.0"
once_cell = "1.21.3"
uuid = { version = "1.19.0", features = ["v4"] }
hex = "0.4.3"
semver = "1.0.27"
num_cpus = "1.17.0"
sysinfo = "0.37.2"
if-addrs = "0.14.0"
hashbrown = "0.16.1"
rustix = "1.1.3"
itertools = "0.14.0"
zip = "2.2.0"

# Other
upon = "0.10.0"
async-recursion = "1.1.1"
rustyline = "11.0.0"
flate2 = "1.1.8"
tar = "0.4.44"
bincode = { version = "2", features = ["serde"] }
flexi_logger = "0.31.8"
tempfile = "3.24.0"

[profile.release]
# Reduce final binary size.
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
