[package]
name = "backup_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
serde = { version = "*", features = ["derive"] }
log = "*"
simplelog = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
serde_json = "1.0"
tide = "0.16.0"
async-std = {version="*", features = ["attributes"]}
sha2 = {version = '0.10.8'}
base58 = '0.2.0'
rusqlite = { version = '0.31.0', features = ['bundled', 'blob'] }
rand = "*"
async-trait = '0.1.80'
backup_lib = { path = "../backup_lib", version = "0.1.0"}
warp = { version = "*" }