[package]
name = "backup_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backup_lib = { path = "../backup_lib", version = "0.1.0"}
rusqlite = { version = '0.31.0', features = ['bundled', 'blob'] }
async-trait = '0.1.80'
futures = "0.3.30"
tokio = { version = "*", features = ["full"] }
sha2 = {version = '0.10.8'}
base58 = '0.2.0'
log = "*"
simplelog = "*"