[package]
name = "node_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
simplelog = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
etcd_client = { path = "../etcd_client" }
reqwest = "*"
tide = "*"
name_client = { path = "../name_client" }
regex = "*"
lazy_static = "*"
