[package]
name = "node_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
simplelog = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
etcd_client = { path = "../etcd_client" }
reqwest = {version = "*", features = ["json"]}
tide = "*"
name_client = { path = "../name_client" }
regex = "*"
sha2 = {version = '0.10.8'}
base58 = '0.2.0'
futures = "0.3.30"
lazy_static = "*"
async-recursion = "*"
version-compare = "*"