[package]
name = "node_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
simplelog = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
etcd-rs = "*"
reqwest = {version = "*", default-features = false, features = ["json", "rustls-tls"]}
tide = "*"
regex = "*"
sha2 = {version = '0.10.8'}
base58 = '0.2.0'
futures = "0.3.30"
lazy_static = "*"
async-recursion = "*"
version-compare = "*"
rusqlite = { version = '0.31.0', features = ['bundled', 'blob'] }
chrono = "0.4"

etcd_client = { path = "../etcd_client" }
name_client = { path = "../name_client" }
gateway-lib = { path = "../gateway-lib"}
backup_service = {path = "../backup_service"}
backup_lib = {path = "../backup_lib"}
vpn = { path = "../vpn" }
num_cpus = "1.16.0"
