[package]
name = "package_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
futures = "0.3"
regex = "*"
async-recursion = "*"
version-compare = "*"
semver = "*"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
simplelog = "*"
dirs = "*"
async-trait = "*"
tempfile = "*"
warp = "0.3"
tar = "0.4"
sha2 = "0.10"
flate2 = "1.0"