[package]
name = "test_klog_gateway_rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls-native-roots"] }
buckyos-api = { path = "../../src/kernel/buckyos-api" }
