[package]
name = "tray-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
sysinfo = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
buckyos-kit = { path = "../../components/buckyos-kit" }

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[[bin]]
name = "tray-controller"
path = "src/main.rs"
