[package]
name = "tray-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
sysinfo = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
jsonwebtoken = "*"  
buckyos-kit = { path = "../../components/buckyos-kit" }
name-lib = { path = "../../components/name-lib" }
name-client = {path = "../../components/name-client"}
package-lib = {path = "../../components/package-lib"}
sys-config = { path = "../../kernel/sys-config" }
kRPC = { path = "../../kernel/kRPC" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = ["Win32_System_Services", "Win32_UI", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[[bin]]
name = "tray-controller"
path = "src/main.rs"
