[package]
name = "tray-controller"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
sysinfo = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
jsonwebtoken = { version = "*", features = ["aws_lc_rs"] }
buckyos-kit = { path = "../../components/buckyos-kit" }
name-lib = { path = "../../components/name-lib" }
name-client = {path = "../../components/name-client"}
package-lib = {path = "../../components/package-lib"}
buckyos-api = { path = "../../kernel/buckyos-api" }
kRPC = { path = "../../kernel/kRPC" }
fs2 = "*"

[target.'cfg(windows)'.dependencies]
windows = { version = "*", features = ["Win32_System_Services", "Win32_UI", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[[bin]]
name = "tray-controller"
path = "src/main.rs"
