[package]
name = "buckyos-kit"
version = "0.2.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "*"
tokio = { version = "*", features = ["full"] }
log = "*"
thiserror = "*"