[package]
name = "debug-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "*"
serde = "*"
serde_json = "*"
backtrace = "*"
chrono = "*"
tide = "*"
http-types = "*"
surf = "*"
buckyos-kit = { path = "../buckyos-kit" }
tokio = { version = "*", features = ["full","tracing"] }
sha2 = "*"
toml = "*"
hex = "*"
once_cell = "*"
