[package]
name = "name-client"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cloudflare"]
cloudflare = ["dep:reqwest"]

[dependencies]
toml = "*"
sysinfo = "*"
thiserror = "*"
log = "*"   
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
async-trait = "*"
hickory-resolver = { version = "*", features = ["dns-over-rustls"] }
tokio = { version = "*", features = ["full"] }
mini-moka = "*" 
jsonwebtoken = "*"
base64="*"
once_cell="*"
lazy_static="*"
cfg-if = "1.0"
reqwest = { version = "0.12", features = ["json"], optional = true }

name-lib = { path = "../name-lib" }
buckyos-kit = { path = "../buckyos-kit" }
kRPC = { path = "../../kernel/kRPC" }



[dev-dependencies]
tempfile = "*"

