[package]
name = "name_lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
async-trait = "*"
trust-dns-resolver = { version = "*", features = ["dns-over-rustls"] }
tokio = { version = "*", features = ["full"] }
mini-moka = "*" 
bucky-crypto = {git = "https://github.com/buckyos/bucky-crypto.git", version = "*", features = ["x509"]}

