[package]
name = "name-lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
log = "*"   
serde = { version = "*", features = ["derive"] }
serde_json = "*"
async-trait = "*"
trust-dns-resolver = { version = "*", features = ["dns-over-rustls"] }
tokio = { version = "*", features = ["full"] }
mini-moka = "*" 
jsonwebtoken = "*"
base64="*"
once_cell="*"
buckyos-kit = { path = "../buckyos-kit" }


