[package]
name = "name-lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sysinfo = "*"
thiserror = "*"
log = "*"   
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
async-trait = "*"
hickory-resolver = { version = "*", features = ["dns-over-rustls"] }
tokio = { version = "*", features = ["full"] }
mini-moka = "*" 
jsonwebtoken = "*"
ed25519-dalek = { version = "*", features = ["rand_core", "pkcs8"] } 
x25519-dalek = { version = "*", features = ["static_secrets","getrandom"] }
curve25519-dalek = "*"
ed25519_to_curve25519 = "*"
base64="*"
once_cell="*"
lazy_static="*"
nvml-wrapper = { version = "*" }
buckyos-kit = { path = "../buckyos-kit" }
kRPC = { path = "../../kernel/kRPC" }


