[package]
name = "ndn-lib"
version = "0.3.0"
edition = "2021"

[dependencies]
log = "*"
thiserror = "*" 
anyhow = "*"
base58 = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*" 
async-trait = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
reqwest = {version = "*", features = ["json", "rustls-tls"]}
surf = "*"  
tide = "*" 
http-types = '*'
rusqlite = { version = "*", features = ["bundled"] }
futures = "*"  
futures-util = "*"
hex = "*"
url = "*"
memmap = "*"
lazy_static = "*"
base32 = "*"
sha2 = { version = ">=0.11.0-pre.4" }
crypto-common = { version = ">=0.2.0-rc.1" }
buckyos-kit = { path = "../buckyos-kit" }
name-lib = { path = "../name-lib" }

[dev-dependencies]
tempfile = "*"
rand = "*"
cyfs-gateway-lib = { path = "../../cyfs_gateway/cyfs-gateway-lib" }
cyfs-warp = { path = "../../cyfs_gateway/cyfs-warp" }
