[package]
name = "ndn-lib"
version = "0.4.0"
edition = "2021"

[dependencies]
log = "*"
thiserror = "*" 
anyhow = "*"
base58 = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*" 
async-trait = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
reqwest = {version = "*", features = ["json", "rustls-tls","stream"]}
surf = "*"  
tide = "*" 
http-types = '*'
rusqlite = { version = "*", features = ["bundled", "backup"] }
futures = "*"  
futures-util = "*"
hex = "*"
url = "*"
memmap = "*"
lazy_static = "*"
base32 = "*"
block-buffer = "=0.11.0-rc.3"
sha2 = { version = ">=0.11.0-pre.4" }
sha3 = { version = "*" }
blake2 = "*"
generic-array = "*"
typenum = "*"
crypto-common = { version = ">=0.2.0-rc.1" }
bincode = { version = "^1.3"}
rand = "*"
jsonwebtoken = "*"
buckyos-kit = { path = "../buckyos-kit" }
name-lib = { path = "../name-lib" }
name-client = { path = "../name-client" }
parity-scale-codec = { version = "*", features = ["derive"] }
parity-util-mem = "*"
hash-db = "0.16"
memory-db = "*"
trie-db = { version = "0.29", features = ["std"] }
sp-trie = "38.0"
base64 = "0.22"
arrow = "55.0"
chrono = "*"
once_cell = "*"
unsigned-varint = "*"
pin-project = "*"
ouroboros = "*"

[dev-dependencies]
tempfile = "*"
rand = "*"
cyfs-gateway-lib = { path = "../../cyfs_gateway/cyfs-gateway-lib" }
cyfs-warp = { path = "../../cyfs_gateway/cyfs-warp" }

