[package]
name = "package-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
buckyos-kit = { path = "../buckyos-kit" }
kRPC = { path = "../../kernel/kRPC"}
name-lib = { path = "../name-lib" }
package-lib = { path = "../package-lib" }
serde_json = "1.0.116"
serde = { version = "1.0", features = ["derive"] }
ndn-lib = { path = "../ndn-lib" }
repo_service = { path = "../../frame/repo_service" }
log = "*"
tokio = { version = "*", features = ["full"] }
jsonwebtoken = "9.3.0"
toml = "0.5"
tar = "*"
flate2 = "*"