[package]
name = "package-lib"
version = "0.4.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json", "stream"] }
futures-util = "*"
futures = "*"
regex = "*"
async-recursion = "*"
version-compare = "*"
semver = "*"
toml = "*"
chrono = "*"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
simplelog = "*"
dirs = "*"
async-trait = "*"
tempfile = "*"
time = "*"
warp = "*"
sha2 = "*"
rusqlite = "*"
async-fd-lock = "*"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
tokio-tar = "*"
ndn-lib = { path = "../ndn-lib" }
name-lib = { path = "../name-lib" }

[dev-dependencies]
tempfile = "*"
