[package]
name = "package-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "*"
futures = "*"
regex = "*"
async-recursion = "*"
version-compare = "*"
semver = "*"
toml = "*"
chrono = "*"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
simplelog = "*"
dirs = "*"
async-trait = "*"
tempfile = "*"
time = "*"
warp = "*"
tar = "*"
sha2 = "*"
flate2 = "*"