[package]
name = "cyfs-dns"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier","@wugren"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
async-trait = "*"
anyhow = "*"
log = "*"
env_logger = "*"
tokio = { version = "*", features = ["full"] }
serde = "*"
serde_json = "*"
hickory-server = "0.25.2"
hickory-proto = "0.25.2"
#chrono = "*"
url = "*"
futures = "*"
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", package = "buckyos-kit" }
name-client = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-client" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-lib" }
cyfs-sn = {path = "../cyfs-sn"}
