[package]
name = "cyfs-dns"
version.workspace = true
edition = "2021"
authors = ["BuckyOS DAO","@waterflier","@wugren"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
async-trait = "*"
anyhow = "*"
log = "*"
env_logger = "*"
tokio = { version = "*", features = ["full"] }
serde = "*"
serde_json = "*"
hickory-server = "0.25.2"
hickory-proto = "0.25.2"
#chrono = "*"
url = "*"
futures = "*"
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
buckyos-kit = { workspace = true }
name-client = { workspace = true }
name-lib = { workspace = true }
cyfs-sn = {path = "../cyfs-sn"}
