[package]
name = "cyfs-gateway-lib"
version = "0.2.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
hex = "*"
anyhow = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"
thiserror = "*"
reqwest = {version = "*", features = ["json", "rustls-tls"]}
jsonwebtoken = "*"
x25519-dalek = { version = "*", features = ["static_secrets","getrandom"] }
ed25519-dalek = { version = "*", features = ["rand_core"] } 
ed25519_to_curve25519 = "*"
sha2 = "*"
url = "*"
lazy_static = "*"
once_cell = "*"
fern = "*"
chrono = "*"
aes = "*"
ctr = "*"
cipher = "*"
futures = "*"
base64 = "*"
hyper = "0.14"
openssl = "0.10"
ring = "0.17"

name-lib = { path = "../../components/name-lib" }
name-client = { path = "../../components/name-client" }
buckyos-kit = { path = "../../components/buckyos-kit" }
ndn-lib = { path = "../../components/ndn-lib" }
cyfs-socks = { path = "../cyfs-socks" }