[package]
name = "cyfs-gateway-lib"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
hex = "*"
anyhow = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
log = "*"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "*"
toml = "*"
thiserror = "*"
reqwest = {version = "*", features = ["json", "rustls-tls"]}
jsonwebtoken = "*"
x25519-dalek = { version = "*", features = ["static_secrets","getrandom"] }
ed25519-dalek = { version = "*", features = ["rand_core"] } 
ed25519_to_curve25519 = "*"
sha2 = "*"
url = "*"
lazy_static = "*"
once_cell = "*"
fern = "*"
chrono = "0.4.39"
aes = "0.8.4"
ctr = "0.9.2"
cipher = "0.4.4"
futures = "*"
base64 = "*"
hyper = { version = "0.14", features = ["full"] }
openssl = "0.10"
rustls = "0.21"
rustls-pemfile = "1.0"
ring = "0.17"
tokio-socks = "*"
libsocks_client = "*"

buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", package = "buckyos-kit" }
name-client = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-client" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-lib" }
ndn-lib = { git = "https://github.com/buckyos/cyfs-ndn.git", package = "ndn-lib" }
cyfs-socks = { path = "../cyfs-socks" }
#buckyos-api = { path = "../../kernel/buckyos-api" }