[package]
name = "cyfs-sn"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]

[dependencies]
anyhow = "*"
log = "*"
lazy_static = "*"
tokio = { version = "*", features = ["full"] }

async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
env_logger = "*"
url = "*"
rusqlite =  { version = "*", features = ["bundled"] }
rand = "0.9.0"
once_cell = "*"
jsonwebtoken = "*"

buckyos-kit = { path = "../../components/buckyos-kit" }
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
kRPC = { path = "../../kernel/kRPC" }

name-lib = { path = "../../components/name-lib" }
name-client = { path = "../../components/name-client" }
#buckyos-api = { path = "../../kernel/buckyos-api" }